--- a/rs/tests/consensus/tecdsa/utils/BUILD.bazel
+++ b/rs/tests/consensus/tecdsa/utils/BUILD.bazel
@@ -3,10 +3,9 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//rs:system-tests-pkg"])
 
 rust_library(
-    name = "utils",
+    name = "ic_consensus_threshold_sig_system_test_utils",
     testonly = True,
     srcs = glob(["src/**/*.rs"]),
-    crate_name = "ic_consensus_threshold_sig_system_test_utils",
     deps = [
         # Keep sorted.
         "//rs/canister_client",
