--- a/rs/tests/consensus/upgrade/BUILD.bazel
+++ b/rs/tests/consensus/upgrade/BUILD.bazel
@@ -12,8 +12,8 @@ rust_library(
     deps = [
         # Keep sorted.
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/tecdsa/utils",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/tecdsa/utils:ic_consensus_threshold_sig_system_test_utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/management_canister_types",
         "//rs/types/types",
@@ -46,8 +46,8 @@ system_test_nns(
         ":common",
         "//rs/registry/subnet_features",
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/tecdsa/utils",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/tecdsa/utils:ic_consensus_threshold_sig_system_test_utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "@crate_index//:anyhow",
@@ -75,7 +75,7 @@ system_test_nns(
         # Keep sorted.
         ":common",
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "@crate_index//:anyhow",
@@ -101,8 +101,8 @@ system_test_nns(
         ":common",
         "//rs/registry/subnet_features",
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/tecdsa/utils",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/tecdsa/utils:ic_consensus_threshold_sig_system_test_utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "@crate_index//:anyhow",
@@ -128,8 +128,8 @@ system_test_nns(
         ":common",
         "//rs/registry/subnet_features",
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/tecdsa/utils",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/tecdsa/utils:ic_consensus_threshold_sig_system_test_utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "@crate_index//:anyhow",
@@ -152,7 +152,7 @@ system_test_nns(
         # Keep sorted.
         "//rs/nns/common",
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "@crate_index//:anyhow",
@@ -179,7 +179,7 @@ system_test_nns(
         "//rs/nns/common",
         "//rs/registry/nns_data_provider",
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "@crate_index//:anyhow",
