--- a/rs/tests/crypto/BUILD.bazel
+++ b/rs/tests/crypto/BUILD.bazel
@@ -12,7 +12,7 @@ DEPENDENCIES = [
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/ic_os/fstrim_tool",
     "//rs/registry/subnet_type",
-    "//rs/tests/consensus/utils",
+    "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
     "//rs/tests/driver:ic-system-test-driver",
     "//rs/types/types",
     "//rs/universal_canister/lib",
