--- a/rs/tests/dre/utils/BUILD.bazel
+++ b/rs/tests/dre/utils/BUILD.bazel
@@ -18,7 +18,7 @@ rust_library(
         "//rs/protobuf",
         "//rs/registry/subnet_type",
         "//rs/tests",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "@crate_index//:anyhow",
