--- a/rs/tests/query_stats/lib/BUILD.bazel
+++ b/rs/tests/query_stats/lib/BUILD.bazel
@@ -11,7 +11,7 @@ rust_library(
     deps = [
         # Keep sorted.
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/types/types",
         "//rs/universal_canister/lib",
