--- a/rs/tests/sdk/BUILD.bazel
+++ b/rs/tests/sdk/BUILD.bazel
@@ -46,7 +46,7 @@ system_test_nns(
         # Keep sorted.
         "sdk-system-tests",
         "//rs/registry/subnet_type",
-        "//rs/tests/consensus/utils",
+        "//rs/tests/consensus/utils:ic_consensus_system_test_utils",
         "//rs/tests/driver:ic-system-test-driver",
         "//rs/tests/nns/nns_dapp",
         "@crate_index//:anyhow",
