--- a/rs/canonical_state/BUILD.bazel
+++ b/rs/canonical_state/BUILD.bazel
@@ -38,7 +38,7 @@ DEV_DEPENDENCIES = [
     "//rs/test_utilities/types",
     "//rs/types/management_canister_types",
     "//rs/types/wasm_types",
-    "//rs/utils",
+    "//rs/utils:ic_utils",
     "@crate_index//:assert_matches",
     "@crate_index//:hex",
     "@crate_index//:lazy_static",
