--- a/rs/consensus/BUILD.bazel
+++ b/rs/consensus/BUILD.bazel
@@ -6,7 +6,7 @@ package(default_visibility = ["//visibility:public"])
 DEPENDENCIES = [
     # Keep sorted.
     "//rs/config",
-    "//rs/consensus/utils",
+    "//rs/consensus/utils:ic_consensus_utils",
     "//rs/crypto",
     "//rs/crypto/prng",
     "//rs/crypto/utils/threshold_sig_der",
@@ -162,7 +162,7 @@ rust_ic_bench(
         ":consensus",
         "//rs/artifact_pool",
         "//rs/config",
-        "//rs/consensus/utils",
+        "//rs/consensus/utils:ic_consensus_utils",
         "//rs/execution_environment",
         "//rs/https_outcalls/consensus",
         "//rs/ingress_manager",
