--- a/rs/consensus/mocks/BUILD.bazel
+++ b/rs/consensus/mocks/BUILD.bazel
@@ -6,7 +6,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//rs/artifact_pool",
     "//rs/config",
-    "//rs/consensus/utils",
+    "//rs/consensus/utils:ic_consensus_utils",
     "//rs/interfaces",
     "//rs/interfaces/state_manager",
     "//rs/monitoring/logger",
