--- a/rs/embedders/BUILD.bazel
+++ b/rs/embedders/BUILD.bazel
@@ -18,7 +18,7 @@ DEPENDENCIES = [
     "//rs/system_api",
     "//rs/types/types",
     "//rs/types/wasm_types",
-    "//rs/utils",
+    "//rs/utils:ic_utils",
     "//rs/utils/lru_cache",
     "//rs/wasm_transform",
     "@crate_index//:anyhow",
