--- a/rs/ic_os/config/BUILD.bazel
+++ b/rs/ic_os/config/BUILD.bazel
@@ -4,7 +4,7 @@ package(default_visibility = ["//rs:ic-os-pkg"])
 
 DEPENDENCIES = [
     # Keep sorted.
-    "//rs/ic_os/utils",
+    "//rs/ic_os/utils:icos_utils",
     "//rs/types/types",
     "@crate_index//:anyhow",
     "@crate_index//:clap",
