--- a/rs/ic_os/os_tools/guestos_tool/BUILD.bazel
+++ b/rs/ic_os/os_tools/guestos_tool/BUILD.bazel
@@ -6,7 +6,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//rs/ic_os/config:config_lib",
     "//rs/ic_os/network",
-    "//rs/ic_os/utils",
+    "//rs/ic_os/utils:icos_utils",
     "@crate_index//:anyhow",
     "@crate_index//:clap",
     "@crate_index//:itertools",
