--- a/rs/ic_os/utils/BUILD.bazel
+++ b/rs/ic_os/utils/BUILD.bazel
@@ -8,20 +8,19 @@ DEPENDENCIES = [
 ]
 
 rust_library(
-    name = "utils",
+    name = "icos_utils",
     srcs = glob(
         ["src/**/*.rs"],
     ),
     aliases = {},
-    crate_name = "utils",
     edition = "2021",
     proc_macro_deps = [],
     deps = DEPENDENCIES,
 )
 
 rust_test(
-    name = "test",
+    name = "icos_utils_test",
     size = "small",
-    crate = ":utils",
+    crate = ":icos_utils",
     deps = DEPENDENCIES,
 )
