--- a/rs/nervous_system/clients/BUILD.bazel
+++ b/rs/nervous_system/clients/BUILD.bazel
@@ -15,7 +15,7 @@ DEPENDENCIES = [
     "//rs/types/base_types",
     "//rs/types/error_types",
     "//rs/types/management_canister_types",
-    "//rs/utils",
+    "//rs/utils:ic_utils",
     "@crate_index//:candid",
     "@crate_index//:num-traits",
     "@crate_index//:serde",
