--- a/rs/sns/test_utils/BUILD.bazel
+++ b/rs/sns/test_utils/BUILD.bazel
@@ -33,7 +33,7 @@ BASE_DEPENDENCIES = [
     "//rs/types/base_types",
     "//rs/types/management_canister_types",
     "//rs/types/types",
-    "//rs/utils",
+    "//rs/utils:ic_utils",
     "@crate_index//:candid",
     "@crate_index//:futures",
     "@crate_index//:lazy_static",
