--- a/rs/state_layout/BUILD.bazel
+++ b/rs/state_layout/BUILD.bazel
@@ -14,7 +14,7 @@ DEPENDENCIES = [
     "//rs/types/management_canister_types",
     "//rs/types/types",
     "//rs/types/wasm_types",
-    "//rs/utils",
+    "//rs/utils:ic_utils",
     "@crate_index//:hex",
     "@crate_index//:libc",
     "@crate_index//:prometheus",
