--- a/rs/test_utilities/artifact_pool/BUILD.bazel
+++ b/rs/test_utilities/artifact_pool/BUILD.bazel
@@ -7,7 +7,7 @@ DEPENDENCIES = [
     "//rs/artifact_pool",
     "//rs/config",
     "//rs/consensus",
-    "//rs/consensus/utils",
+    "//rs/consensus/utils:ic_consensus_utils",
     "//rs/interfaces",
     "//rs/interfaces/registry",
     "//rs/interfaces/state_manager",
