--- a/rs/types/error_types/BUILD.bazel
+++ b/rs/types/error_types/BUILD.bazel
@@ -11,7 +11,7 @@ rust_library(
     deps = [
         # Keep sorted.
         "//rs/protobuf",
-        "//rs/utils",
+        "//rs/utils:ic_utils",
         "@crate_index//:serde",
         "@crate_index//:strum",
     ],
