--- a/rs/types/management_canister_types/BUILD.bazel
+++ b/rs/types/management_canister_types/BUILD.bazel
@@ -26,7 +26,7 @@ rust_library(
         "//rs/protobuf",
         "//rs/types/base_types",
         "//rs/types/error_types",
-        "//rs/utils",
+        "//rs/utils:ic_utils",
         "@crate_index//:candid",
         "@crate_index//:ic-btc-interface",
         "@crate_index//:num-traits",
